fixed homecontainer height on small screen

--- a/css/main.css
+++ b/css/main.css
@@ -270,6 +270,7 @@ a {
         height: auto;
         flex-direction: column;
         gap: 35px;
+        padding-top: 0rem;
     }
 
     .intro-text {
